# monotax

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  cog.toml  monotax.toml
.sqlx/: query-0a351ad6bf47f70c69cf0c51f82968347e74c29b0ddd0506347c098969a1c571.json  query-3fc8d84814e95a262cca4203a438e7d8cd982e04931951c12aa99f925e5a4ab1.json  query-50d6b731c75f0e4926a9f8d8f31f135c3e650b20497ec8e3bbd59592d04c7177.json  query-8467abd9a0e95b35aab59c374d429af07a20ae758c1fadd2efc32e5f719e9ef6.json  query-c81131455467c5fc2d9bd53c6bcb6be61fa6a386039dd2438564d1c386cf1bfb.json  query-c92bf58abbaeff4ec68fa1929c5239cc9668a533ccff90216ed7ee7d56cd98c2.json  query-d845a70064a38f63e71a2d83ed1e5e793d9f5067d813af4b0d6a9aa38868203a.json
crates/monotax/: Cargo.toml
crates/monotax/src/: init.rs  main.rs
crates/monotax/src/cli/: app.rs  filter.rs  handler.rs  income.rs  mod.rs  opts.rs  report.rs  router.rs
crates/monotax/src/config/: configuration.rs  dir.rs
crates/monotax_core/: Cargo.toml
crates/monotax_core/migrations/: 20240702181251_create_income_table.sql  20240720074332_change_income_field_types.sql  20240720115539_add_payment_table.sql
crates/monotax_core/src/: init.rs  lib.rs  main.rs  report.rs
crates/monotax_core/src/app/: balance.rs  income.rs  mod.rs
crates/monotax_core/src/cli/: filter.rs  payment.rs
crates/monotax_core/src/domain/: config.rs  mod.rs
crates/monotax_core/src/domain/filter/: income.rs  mod.rs
crates/monotax_core/src/domain/model/: income.rs  income_tax.rs  mod.rs  payment.rs  quarter.rs  tax_payment.rs
crates/monotax_core/src/domain/repository/: income.rs  income_tax.rs  mod.rs  tax_payment.rs
crates/monotax_core/src/filter/: date.rs  mod.rs
crates/monotax_core/src/infra/: io.rs
crates/monotax_core/src/infra/sqlx/: connection.rs  criteria.rs  record.rs
crates/monotax_core/src/integration/: mod.rs  taxer.rs
crates/monotax_core/src/payment/report/: mod.rs  plaintext.rs
crates/monotax_core/src/report/: balance.rs  console.rs
crates/monotax_core/tests/: income_repository_ctk.rs  sqlx_income_repository.rs  uni_import.rs
crates/monotax_core/tests/test_files/: balance.csv
crates/monotax_dbo/: Cargo.toml
crates/monotax_dbo/src/: dbo.rs  lib.rs
crates/monotax_dbo/tests/: dbo.rs
crates/monotax_sqlite/: Cargo.toml
crates/monotax_sqlite/migrations/: 20250126174333_create_income_tax_tables.sql
crates/monotax_sqlite/src/: configuration.rs  connection.rs  criteria.rs  income_repository.rs  income_tax_repository.rs  lib.rs  payment_repository.rs  record.rs  tax_payment_repository.rs
crates/monotax_sqlite/tests/: income_repository_ctk.rs  sqlx_income_repository.rs
docs/: Architecture.md  containers-current.puml  containers-target.puml  context.puml
docs/decisions/: 0000-record-architecture-decisions.md  0001-cross-compile-on-dev-machine.md  0002-replace-rusqlite-via-sqlx.md  adr-template.md
migrations/: 20240813213658_add_reconciliation_table.sql
src/: config.rs  date_filter.rs  income.rs  init.rs  lib.rs  main.rs  report.rs  taxer.rs  time.rs  universalbank.rs
src/app/: mod.rs  reconciliation.rs  tax.rs
src/cli/: app.rs  criterion.rs  filter.rs  handler.rs  mod.rs  payment.rs  predicate.rs
src/config/: configuration.rs  dir.rs  mod.rs
src/db/: config.rs  criteria.rs  date.rs  init.rs  mod.rs  repository.rs
src/db/migration/: base.rs  mod.rs  v0_2_0.rs
src/db/repository/: mod.rs
src/db/rusqlite/: connect.rs  date.rs  income.rs  mod.rs  payment.rs
src/db/sqlx/: connection.rs  criteria.rs  income_repository.rs  mod.rs  payment_repository.rs  reconciliation_repository.rs  record.rs  tax_payment_repository.rs
src/domain/: income.rs  mod.rs  payment.rs  reconciliation.rs  tax_payment.rs
src/domain/filter/: income.rs
src/domain/model/: income.rs  mod.rs
src/domain/repository/: income.rs  payment.rs  reconciliation.rs
src/filter/: date.rs  mod.rs
src/income/: criteria.rs  mod.rs
src/infra/: mod.rs
src/infra/rusqlite/: income.rs  mod.rs
src/infra/sqlx/: criteria.rs  income_repository.rs  init.rs  payment_repository.rs
src/integration/: mod.rs
src/payment/: mod.rs
src/payment/report/: mod.rs  plaintext.rs
src/report/: console.rs  csv.rs
tests/: common.rs  income_repository_ctk.rs  rusqlite_repository.rs  sqlite_repository.rs  sqlite_setup.rs  sqlx_income_repository.rs  uni_import.rs
