[package]
name = "monotax"
version = "0.2.0"
edition = "2021"
description = "A tool to generate and manage tax reports"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
encoding_rs = "0.8.33"
encoding_rs_rw = "0.4.2"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[dependencies.rusqlite]
version = "0.31.0"
features = ["chrono", "bundled"]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "cross-raspbian:aarch64"
