[package]
name = "monotax"
version = "0.1.0"
edition = "2021"

[dependencies]
monotax_core = { path = "../monotax_core/" }

anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

sqlx = { version = "0.7", features = [
  "macros",
  "sqlite",
  "runtime-tokio",
  "chrono",
] }
dotenvy = "0.15.7"
