[package]
name = "monotax_core"
version = "0.3.0-alpha.2"
edition = "2021"
description = "A tool to generate and manage tax reports"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.81"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
encoding_rs = "0.8.33"
encoding_rs_rw = "0.4.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4"] }
